# cuda-path-simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cpu_ci.yml  gpu_perf_gate.yml
configs/: high_vol_upout.json  nominal_european.json  perf_gate_thresholds.json
docs/: NSIGHT_REPORT_TEMPLATE.md  PERF_GATES.md  RESUME_BULLETS.md  VERIFICATION_REPORT.md
include/: argparse.hpp  low_discrepancy.hpp  sim_config.hpp
scripts/: benchmark.py  compare_ncu_csv.py  convergence_report.py  mode_sweep.py  perf_gate.py  plot_benchmark.py  profile_ncu.sh  profile_ncu_csv.sh  profile_nsight.sh  run_from_config.py  stress_suite.py  validate_parity.py
src/: cpu_main.cpp  gpu_main.cu
